force-app/main/default/objects/Contact/fields/LMS_Active__c.field-meta.xml
<CustomField>
    <fullName>LMS_Active__c</fullName>
    <label>LMS Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Whether this learner's Schoox account is active, synced from Schoox's per-user active flag.</description>
</CustomField>