force-app/main/default/objects/Contact/fields/LMS_Courses_Completed__c.field-meta.xml
<CustomField>
    <fullName>LMS_Courses_Completed__c</fullName>
    <label>LMS Courses Completed</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>