force-app/main/default/objects/Contact/fields/LMS_Courses_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>LMS_Courses_Enrolled__c</fullName>
    <label>LMS Courses Enrolled</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <description>Total Schoox courses this learner is enrolled in.</description>
</CustomField>