force-app/main/default/objects/Contact/fields/LMS_Courses_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>LMS_Courses_In_Progress__c</fullName>
    <label>LMS Courses In Progress</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>