force-app/main/default/objects/Contact/fields/LMS_Estimated_Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>LMS_Estimated_Hours_Remaining__c</fullName>
    <label>LMS Estimated Hours Remaining</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>1</scale>
    <description>Sum of estimated remaining hours across all in-progress/not-started courses.</description>
</CustomField>