force-app/main/default/objects/Contact/fields/LMS_Last_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>LMS_Last_Completed_Date__c</fullName>
    <label>LMS Last Completed Date</label>
    <type>Date</type>
    <description>Most recent course completion date across all of this learner's Schoox courses.</description>
</CustomField>