force-app/main/default/objects/Contact/fields/LMS_Last_Synced__c.field-meta.xml
<CustomField>
    <fullName>LMS_Last_Synced__c</fullName>
    <label>LMS Last Synced</label>
    <type>DateTime</type>
</CustomField>