force-app/main/default/objects/Contact/fields/LMS_Learning_History__c.field-meta.xml
<CustomField>
    <fullName>LMS_Learning_History__c</fullName>
    <label>LMS Learning History</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Per-course breakdown (name, status, % complete, hours remaining, dates) synced from Schoox, one line per course. Kept as text since this org's edition has no free custom-object slots for a proper child record per course.</description>
</CustomField>