force-app/main/default/objects/Contact/fields/LMS_Next_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>LMS_Next_Due_Date__c</fullName>
    <label>LMS Next Due Date</label>
    <type>Date</type>
    <description>Earliest due date among this learner's incomplete courses.</description>
</CustomField>