force-app/main/default/objects/Contact/fields/LMS_Overall_Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>LMS_Overall_Percent_Complete__c</fullName>
    <label>LMS Overall Percent Complete</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Average completion percentage across all enrolled courses.</description>
</CustomField>